MODSCHED-83: Scheduled circulation events are not triggered (#233)